# cinemap

./: .vercelignore  Procfile  README.md  package-lock.json  package.json  vercel.json
plot-ai/backend/plot-backend/: README.md  current_script.js  db.sqlite3  debug_test.html  diagnose_gemini.py  diagram.mmd  extracted_script.js  fix_ssl_gemini.py  main.py  mermaid.py  mermaid_server.py  pyproject.toml  requirements.txt  simple_test.html  test_diagram.mmd  test_js.html  test_mermaid_integration.py  test_multi_flowcharts.py  test_multi_svgs.py  test_prompt.py
plot-ai/backend/plot-backend/gemini_conversation/: apps.py  middleware.py  models.py  services.py  urls.py  views.py
plot-ai/backend/plot-backend/gemini_conversation/gemini_stuff/: main.py  sounddevice_test.py  system_prompt.txt  whisper_transcription.py
plot-ai/backend/plot-backend/gemini_conversation/migrations/: 0001_initial.py
plot-ai/backend/plot-backend/generation/: models.py  serializers.py  urls.py
plot-ai/backend/plot-backend/generation/migrations/: 0001_initial.py  0002_alter_visualizationrequest_visualization_type.py
plot-ai/backend/plot-backend/generation/services/: mermaid_service.py
plot-ai/backend/plot-backend/generation/views/: __init__.py  demo_views.py  main_views.py  mermaid_views.py  simple_test_view.py  (+1 more)
plot-ai/backend/plot-backend/interview/: models.py  serializers.py  urls.py  views.py
plot-ai/backend/plot-backend/plot/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
plot-ai/backend/plot-backend/story/: models.py  serializers.py  urls.py  views.py
(+35 files in other folders)
